tests/NormalTests/paczka1/small_fuzzy/38826112.err
Error in line 7: Pj2 S891 24,7
Error in line 13: A724 A762 70,7
